# amqcpp

./: CMakeLists.txt  amqp_connection.hpp  amqp_listener.hpp  amqp_message.hpp  amqp_process.hpp  amqp_types.cpp  amqp_types.hpp  error.cpp
example/: consume.cpp
src/: amqp_channel.hpp  amqp_connection.cpp  amqp_private.hpp  amqp_process.cpp  amqp_visitor.hpp  error.hpp  util.hpp
